--- a/.gut_editor_config.json
+++ b/.gut_editor_config.json
@@ -32,12 +32,12 @@
  "post_run_script": "",
  "pre_run_script": "",
  "prefix": "test_",
- "selected": "test_osc_mapper.gd",
+ "selected": "test_osc_interface.gd",
  "should_exit": false,
  "should_exit_on_success": false,
  "should_maximize": false,
  "show_help": false,
  "suffix": ".gd",
  "tests": [],
- "unit_test_name": null
+ "unit_test_name": "test_listAssets"
 }
