Remove GUT addon from the repo

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,5 @@ export_presets.cfg
 # Imported translations (automatically generated from CSV files)
 *.translation
 
-/addons/gut/*
+addons/gut/*
 .gut*
